--- a/Games/GiftOfTheSanctum/zmeyconfig.ini
+++ b/Games/GiftOfTheSanctum/zmeyconfig.ini
@@ -1,5 +1,5 @@
 [InputController]
-Actions=WalkX0,CONT+LeftStickX
-Actions=WalkZ0,CONT+LeftStickY
-Actions=Cast0,Space
+Actions=WalkX,CONT+LeftStickX
+Actions=WalkZ,CONT+LeftStickY
+Actions=Cast,Space
 
