General cleanup of graphics backend stuff.
Renamed backend to Device.
Moved some stuff to separate files.
Removed some scripting related code

--- a/Projects/Zmey/Zmey.vcxproj.filters
+++ b/Projects/Zmey/Zmey.vcxproj.filters
@@ -176,9 +176,6 @@
     <ClInclude Include="..\..\include\Zmey\MemoryStream.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Backend.h">
-      <Filter>include\Graphics\Backend</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Vulkan\VulkanBackend.h">
       <Filter>include\Graphics\Backend\Vulkan</Filter>
     </ClInclude>
@@ -196,9 +193,6 @@
     </ClInclude>
     <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Vulkan\VulkanShaders.h">
       <Filter>include\Graphics\Backend\Vulkan</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Dx12\Dx12Backend.h">
-      <Filter>include\Graphics\Backend\Dx12</Filter>
     </ClInclude>
     <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Dx12\Dx12CommandList.h">
       <Filter>include\Graphics\Backend\Dx12</Filter>
@@ -263,6 +257,24 @@
     <ClInclude Include="..\..\include\Zmey\Job\Queue.h">
       <Filter>include\Job</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\include\Zmey\Graphics\Managers\TextureManager.h">
+      <Filter>include\Graphics\Managers</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Buffer.h">
+      <Filter>include\Graphics\Backend</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Dx12\Dx12Device.h">
+      <Filter>include\Graphics\Backend\Dx12</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Device.h">
+      <Filter>include\Graphics\Backend</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\Zmey\Graphics\Backend\GraphicsPipelineState.h">
+      <Filter>include\Graphics\Backend</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Texture.h">
+      <Filter>include\Graphics\Backend</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\Source\EngineLoop.cpp">
@@ -306,9 +318,6 @@
     </ClCompile>
     <ClCompile Include="..\..\Source\Graphics\Backend\Vulkan\VulkanCommandList.cpp">
       <Filter>Source\Graphics\Backend\Vulkan</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Source\Graphics\Backend\Dx12\Dx12Backend.cpp">
-      <Filter>Source\Graphics\Backend\Dx12</Filter>
     </ClCompile>
     <ClCompile Include="..\..\Source\Graphics\Backend\Dx12\Dx12CommandList.cpp">
       <Filter>Source\Graphics\Backend\Dx12</Filter>
@@ -354,6 +363,12 @@
     </ClCompile>
     <ClCompile Include="..\..\Source\Job\JobSystemImpl.cpp">
       <Filter>Source\Job</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Source\Graphics\Managers\TextureManager.cpp">
+      <Filter>Source\Graphics\Managers</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Source\Graphics\Backend\Dx12\Dx12Device.cpp">
+      <Filter>Source\Graphics\Backend\Dx12</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
