--- a/Projects/Zmey/Zmey.vcxproj
+++ b/Projects/Zmey/Zmey.vcxproj
@@ -133,13 +133,16 @@
     <ClInclude Include="..\..\include\Zmey\EngineLoop.h" />
     <ClInclude Include="..\..\include\Zmey\EntityManager.h" />
     <ClInclude Include="..\..\include\Zmey\Game.h" />
-    <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Backend.h" />
+    <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Device.h" />
     <ClInclude Include="..\..\include\Zmey\Graphics\Backend\BackendDeclarations.h" />
+    <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Buffer.h" />
     <ClInclude Include="..\..\include\Zmey\Graphics\Backend\CommandList.h" />
-    <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Dx12\Dx12Backend.h" />
+    <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Dx12\Dx12Device.h" />
     <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Dx12\Dx12CommandList.h" />
     <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Dx12\Dx12Helpers.h" />
     <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Dx12\Dx12Shaders.h" />
+    <ClInclude Include="..\..\include\Zmey\Graphics\Backend\GraphicsPipelineState.h" />
+    <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Texture.h" />
     <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Vulkan\VulkanBackend.h" />
     <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Vulkan\VulkanCommandList.h" />
     <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Vulkan\VulkanHelpers.h" />
@@ -150,6 +153,7 @@
     <ClInclude Include="..\..\include\Zmey\Graphics\GraphicsObjects.h" />
     <ClInclude Include="..\..\include\Zmey\Graphics\Managers\BufferManager.h" />
     <ClInclude Include="..\..\include\Zmey\Graphics\Managers\MeshManager.h" />
+    <ClInclude Include="..\..\include\Zmey\Graphics\Managers\TextureManager.h" />
     <ClInclude Include="..\..\include\Zmey\Graphics\Renderer.h" />
     <ClInclude Include="..\..\include\Zmey\Graphics\RenderPasses.h" />
     <ClInclude Include="..\..\include\Zmey\Graphics\ResourceHandles.h" />
@@ -189,7 +193,7 @@
     <ClCompile Include="..\..\Source\Components\TransformManager.cpp" />
     <ClCompile Include="..\..\Source\EngineLoop.cpp" />
     <ClCompile Include="..\..\Source\EntityManager.cpp" />
-    <ClCompile Include="..\..\Source\Graphics\Backend\Dx12\Dx12Backend.cpp" />
+    <ClCompile Include="..\..\Source\Graphics\Backend\Dx12\Dx12Device.cpp" />
     <ClCompile Include="..\..\Source\Graphics\Backend\Dx12\Dx12CommandList.cpp" />
     <ClCompile Include="..\..\Source\Graphics\Backend\Vulkan\VulkanBackend.cpp" />
     <ClCompile Include="..\..\Source\Graphics\Backend\Vulkan\VulkanCommandList.cpp" />
@@ -197,6 +201,7 @@
     <ClCompile Include="..\..\Source\Graphics\Features\MeshRenderer.cpp" />
     <ClCompile Include="..\..\Source\Graphics\Managers\BufferManager.cpp" />
     <ClCompile Include="..\..\Source\Graphics\Managers\MeshManager.cpp" />
+    <ClCompile Include="..\..\Source\Graphics\Managers\TextureManager.cpp" />
     <ClCompile Include="..\..\Source\Graphics\Renderer.cpp" />
     <ClCompile Include="..\..\Source\Graphics\View.cpp" />
     <ClCompile Include="..\..\Source\InputController.cpp" />
