--- a/Projects/Zmey/Zmey.vcxproj
+++ b/Projects/Zmey/Zmey.vcxproj
@@ -141,6 +141,7 @@
     <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Dx12\Dx12CommandList.h" />
     <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Dx12\Dx12Helpers.h" />
     <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Dx12\Dx12Shaders.h" />
+    <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Dx12\Dx12Texture.h" />
     <ClInclude Include="..\..\include\Zmey\Graphics\Backend\GraphicsPipelineState.h" />
     <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Texture.h" />
     <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Vulkan\VulkanBackend.h" />
@@ -154,9 +155,10 @@
     <ClInclude Include="..\..\include\Zmey\Graphics\Managers\BufferManager.h" />
     <ClInclude Include="..\..\include\Zmey\Graphics\Managers\MeshManager.h" />
     <ClInclude Include="..\..\include\Zmey\Graphics\Managers\TextureManager.h" />
+    <ClInclude Include="..\..\include\Zmey\Graphics\Managers\UploadHeap.h" />
     <ClInclude Include="..\..\include\Zmey\Graphics\Renderer.h" />
+    <ClInclude Include="..\..\include\Zmey\Graphics\RendererGlobals.h" />
     <ClInclude Include="..\..\include\Zmey\Graphics\RenderPasses.h" />
-    <ClInclude Include="..\..\include\Zmey\Graphics\ResourceHandles.h" />
     <ClInclude Include="..\..\include\Zmey\Graphics\View.h" />
     <ClInclude Include="..\..\include\Zmey\Hash.h" />
     <ClInclude Include="..\..\include\Zmey\InputController.h" />
@@ -202,6 +204,7 @@
     <ClCompile Include="..\..\Source\Graphics\Managers\BufferManager.cpp" />
     <ClCompile Include="..\..\Source\Graphics\Managers\MeshManager.cpp" />
     <ClCompile Include="..\..\Source\Graphics\Managers\TextureManager.cpp" />
+    <ClCompile Include="..\..\Source\Graphics\Managers\UploadHeap.cpp" />
     <ClCompile Include="..\..\Source\Graphics\Renderer.cpp" />
     <ClCompile Include="..\..\Source\Graphics\View.cpp" />
     <ClCompile Include="..\..\Source\InputController.cpp" />
