--- a/Projects/Zmey/Zmey.vcxproj.filters
+++ b/Projects/Zmey/Zmey.vcxproj.filters
@@ -134,9 +134,6 @@
     <ClInclude Include="..\..\include\Zmey\Graphics\FrameData.h">
       <Filter>include\Graphics</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\include\Zmey\Graphics\ResourceHandles.h">
-      <Filter>include\Graphics</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\include\Zmey\Math\Math.h">
       <Filter>include\Math</Filter>
     </ClInclude>
@@ -275,6 +272,15 @@
     <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Texture.h">
       <Filter>include\Graphics\Backend</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Dx12\Dx12Texture.h">
+      <Filter>include\Graphics\Backend\Dx12</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\Zmey\Graphics\Managers\UploadHeap.h">
+      <Filter>include\Graphics\Managers</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\Zmey\Graphics\RendererGlobals.h">
+      <Filter>include\Graphics</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\Source\EngineLoop.cpp">
@@ -369,6 +375,9 @@
     </ClCompile>
     <ClCompile Include="..\..\Source\Graphics\Backend\Dx12\Dx12Device.cpp">
       <Filter>Source\Graphics\Backend\Dx12</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Source\Graphics\Managers\UploadHeap.cpp">
+      <Filter>Source\Graphics</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
