--- a/Projects/Zmey/Zmey.vcxproj.filters
+++ b/Projects/Zmey/Zmey.vcxproj.filters
@@ -173,9 +173,6 @@
     <ClInclude Include="..\..\include\Zmey\MemoryStream.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Vulkan\VulkanBackend.h">
-      <Filter>include\Graphics\Backend\Vulkan</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\include\Zmey\Graphics\Backend\BackendDeclarations.h">
       <Filter>include\Graphics\Backend</Filter>
     </ClInclude>
@@ -281,6 +278,15 @@
     <ClInclude Include="..\..\include\Zmey\Graphics\RendererGlobals.h">
       <Filter>include\Graphics</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Vulkan\VulkanBuffer.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Vulkan\VulkanDevice.h">
+      <Filter>include\Graphics\Backend\Vulkan</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Vulkan\VulkanTexture.h">
+      <Filter>include\Graphics\Backend\Vulkan</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\Source\EngineLoop.cpp">
@@ -327,9 +333,6 @@
     </ClCompile>
     <ClCompile Include="..\..\Source\Graphics\Backend\Dx12\Dx12CommandList.cpp">
       <Filter>Source\Graphics\Backend\Dx12</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Source\Graphics\Backend\Vulkan\VulkanBackend.cpp">
-      <Filter>Source\Graphics\Backend\Vulkan</Filter>
     </ClCompile>
     <ClCompile Include="..\..\Source\Graphics\Managers\MeshManager.cpp">
       <Filter>Source\Graphics\Managers</Filter>
@@ -378,6 +381,9 @@
     </ClCompile>
     <ClCompile Include="..\..\Source\Graphics\Managers\UploadHeap.cpp">
       <Filter>Source\Graphics</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Source\Graphics\Backend\Vulkan\VulkanDevice.cpp">
+      <Filter>Source\Graphics\Backend\Vulkan</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
