First commit for imgui. Rendering is implemented + some kind of input(skipping some input :/). Works on RT which will be changed. Works only on Dx12

--- a/Projects/Zmey/Zmey.vcxproj
+++ b/Projects/Zmey/Zmey.vcxproj
@@ -188,6 +188,12 @@
     <ClInclude Include="..\..\include\Zmey\Utilities.h" />
     <ClInclude Include="..\..\include\Zmey\World.h" />
     <ClInclude Include="..\..\Source\Platform\WindowsPlatform.h" />
+    <ClInclude Include="..\..\ThirdParty\include\imgui\imconfig.h" />
+    <ClInclude Include="..\..\ThirdParty\include\imgui\imgui.h" />
+    <ClInclude Include="..\..\ThirdParty\include\imgui\imgui_internal.h" />
+    <ClInclude Include="..\..\ThirdParty\include\imgui\stb_rect_pack.h" />
+    <ClInclude Include="..\..\ThirdParty\include\imgui\stb_textedit.h" />
+    <ClInclude Include="..\..\ThirdParty\include\imgui\stb_truetype.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\Source\Components\ComponentRegistry.cpp" />
@@ -222,6 +228,9 @@
     <ClCompile Include="..\..\Source\Platform\WindowsPlatform.cpp" />
     <ClCompile Include="..\..\Source\ResourceLoader\ResourceLoader.cpp" />
     <ClCompile Include="..\..\Source\World.cpp" />
+    <ClCompile Include="..\..\ThirdParty\include\imgui\imgui.cpp" />
+    <ClCompile Include="..\..\ThirdParty\include\imgui\imgui_demo.cpp" />
+    <ClCompile Include="..\..\ThirdParty\include\imgui\imgui_draw.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
