--- a/Tools/Incinerator/Incinerator.vcxproj.filters
+++ b/Tools/Incinerator/Incinerator.vcxproj.filters
@@ -3,8 +3,19 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Incinerator.cpp" />
+    <ClCompile Include="GLTFLoader.cpp">
+      <Filter>Loaders</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Incinerator.h" />
+    <ClInclude Include="GLTFLoader.h">
+      <Filter>Loaders</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="Loaders">
+      <UniqueIdentifier>{db0879c4-ce93-47ca-aafc-4a081ea5911a}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
 </Project>
