--- a/Projects/Zmey/Zmey.vcxproj
+++ b/Projects/Zmey/Zmey.vcxproj
@@ -156,6 +156,7 @@
     <ClInclude Include="..\..\include\Zmey\Graphics\FrameData.h" />
     <ClInclude Include="..\..\include\Zmey\Graphics\GraphicsObjects.h" />
     <ClInclude Include="..\..\include\Zmey\Graphics\Managers\BufferManager.h" />
+    <ClInclude Include="..\..\include\Zmey\Graphics\Managers\MaterialManager.h" />
     <ClInclude Include="..\..\include\Zmey\Graphics\Managers\MeshManager.h" />
     <ClInclude Include="..\..\include\Zmey\Graphics\Managers\TextureManager.h" />
     <ClInclude Include="..\..\include\Zmey\Graphics\Managers\UploadHeap.h" />
@@ -212,6 +213,7 @@
     <ClCompile Include="..\..\Source\Graphics\Features\MeshRenderer.cpp" />
     <ClCompile Include="..\..\Source\Graphics\Features\UIRenderer.cpp" />
     <ClCompile Include="..\..\Source\Graphics\Managers\BufferManager.cpp" />
+    <ClCompile Include="..\..\Source\Graphics\Managers\MaterialManager.cpp" />
     <ClCompile Include="..\..\Source\Graphics\Managers\MeshManager.cpp" />
     <ClCompile Include="..\..\Source\Graphics\Managers\TextureManager.cpp" />
     <ClCompile Include="..\..\Source\Graphics\Managers\UploadHeap.cpp" />
