--- a/Projects/Zmey/Zmey.vcxproj.filters
+++ b/Projects/Zmey/Zmey.vcxproj.filters
@@ -314,6 +314,9 @@
     <ClInclude Include="..\..\include\Zmey\Graphics\Features\UIRenderer.h">
       <Filter>include\Graphics\Features</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\include\Zmey\Graphics\Managers\MaterialManager.h">
+      <Filter>include\Graphics\Managers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\Source\EngineLoop.cpp">
@@ -423,6 +426,9 @@
     </ClCompile>
     <ClCompile Include="..\..\Source\Graphics\Features\UIRenderer.cpp">
       <Filter>Source\Graphics\Features</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Source\Graphics\Managers\MaterialManager.cpp">
+      <Filter>Source\Graphics\Managers</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
