Added concept of ResourceSet. Pipeline state is defined with list of resource set. CommandList are filled with setting resource set data instead of pushing constants.

--- a/Projects/Zmey/Zmey.vcxproj
+++ b/Projects/Zmey/Zmey.vcxproj
@@ -133,6 +133,7 @@
     <ClInclude Include="..\..\include\Zmey\EngineLoop.h" />
     <ClInclude Include="..\..\include\Zmey\EntityManager.h" />
     <ClInclude Include="..\..\include\Zmey\Game.h" />
+    <ClInclude Include="..\..\include\Zmey\Graphics\Backend\BackendResourceSet.h" />
     <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Device.h" />
     <ClInclude Include="..\..\include\Zmey\Graphics\Backend\BackendDeclarations.h" />
     <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Buffer.h" />
@@ -163,6 +164,7 @@
     <ClInclude Include="..\..\include\Zmey\Graphics\Renderer.h" />
     <ClInclude Include="..\..\include\Zmey\Graphics\RendererGlobals.h" />
     <ClInclude Include="..\..\include\Zmey\Graphics\RenderPasses.h" />
+    <ClInclude Include="..\..\include\Zmey\Graphics\ResourceSet.h" />
     <ClInclude Include="..\..\include\Zmey\Graphics\View.h" />
     <ClInclude Include="..\..\include\Zmey\Hash.h" />
     <ClInclude Include="..\..\include\Zmey\InputController.h" />
@@ -205,6 +207,7 @@
     <ClCompile Include="..\..\Source\Components\TransformManager.cpp" />
     <ClCompile Include="..\..\Source\EngineLoop.cpp" />
     <ClCompile Include="..\..\Source\EntityManager.cpp" />
+    <ClCompile Include="..\..\Source\Graphics\Backend\CommandList.cpp" />
     <ClCompile Include="..\..\Source\Graphics\Backend\Dx12\Dx12Device.cpp" />
     <ClCompile Include="..\..\Source\Graphics\Backend\Dx12\Dx12CommandList.cpp" />
     <ClCompile Include="..\..\Source\Graphics\Backend\Vulkan\VulkanDevice.cpp" />
